Confetti library changed & npm script changes done
- Existing library returned 404.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </main>
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js" defer></script>
         <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti/dist/confetti.browser.min.js" defer></script>
         <script src="/assets/scripts/main.js"></script>
     </body>
 </html>
