Loader added before loading quotes
- NPM dev build related changes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
             <main class="main justify-content-center align-items-center" tabindex="-1">
                 <div id="quoteContainer" class="container d-flex flex-column justify-content-center align-items-center">
                     <div id="quoteContainerInner" class="d-flex flex-column justify-content-center align-items-center">
-                        <blockquote class="quote"></blockquote>
+                        <blockquote class="quote">
+                            <div class="ripple-loader"><div></div><div></div></div>
+                        </blockquote>
                         <cite class="author"></cite>
+
                     </div>
                     <div style="margin-top: 2rem" data-html2canvas-ignore="true">
                         <button class="black-button button-lg" onclick="showRandomQuote()">Need more motivation!</button>
